[package]
name = "srix4k"
description = "High-level crate for communicating with SRIX4K NFC tags"
version = "0.1.0"
license = "GPL-3.0-only"
homepage = "https://github.com/riklus/srix4k"
repository = "https://github.com/riklus/srix4k"
readme = "README.md"

[dependencies]
log = "0.4.17"
nfc1 = { version = "0.5", default-features = false}
